@@ -1,5 +1,10 @@
 Revision history for Perl extension Catalyst::Model::DBIC::Schema
 
+        - Move documentation on setting up authentication into its own section
+          for clarity.
+        - Other misc documentation enhancements to make the docs more clear
+          about the important things to know.
+        - Convert Authentication Plugin configuration example to new style.
 
 0.30  Sun Oct 18 01:35:36 EDT 2009
         - change no sources error to a warning (with a way to turn it off)
